--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -2,50 +2,88 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Map Example</title>
-  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-  <script src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=rhu3lcktrl"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Map Example</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=rhu3lcktrl"></script>
 </head>
 <body>
 <h1>Search Results</h1>
-<div id="map" style="width:100%;height:400px;"></div>
 
-<div th:if="${query}">
-  <ul>
-    <li id="restaurant" th:each="restaurant : ${query}" th:data-value="${query}">
-      <h2 th:text="${restaurant.title}"></h2>
-      <p th:text="'Address: ' + ${restaurant.address}"></p>
-      <p th:text="'rodeAddress: ' + ${restaurant.roadAddress}"></p>
-      <input type="text" id="latitude" th:value = "${restaurant.latitude}"></input>
-      <input type="text"  id="longitude" th:value = "${restaurant.longitude}"></input>
-    </li>
-  </ul>
+<form th:action="@{/test}" method="get">
+    <label for="query">검색</label>
+    <input type="text" id="query" name="query" th:value="${query}" placeholder="주소 키워드를 입력하세요!">
+    <input type="submit" id="search-submit" value="검색">
+</form>
+<div style="display: flex">
+    <div id="map" style="width:30%;height:300px;"></div>
+
+    <div th:if="${searchData}">
+        <ul>
+            <li id="restaurant" th:each="searchData : ${searchData}">
+                <h3 th:text="${searchData.title}"></h3>
+                <p th:text="'Address: ' + ${searchData.address}"></p>
+                <p th:text="'rodeAddress: ' + ${searchData.roadAddress}"></p>
+                <input type="hidden" id="latitude" th:value = "${searchData.latitude}" />
+                <input type="hidden"  id="longitude" th:value = "${searchData.longitude}"/>
+                <input type="radio" name="chk-address" th:data-lat="${searchData.latitude}" th:data-lng="${searchData.longitude}"/>
+            </li>
+        </ul>
+    </div>
 </div>
 
 <script th:inline="javascript">
-  var locations = /*[[${query}]]*/ [];
-  console.log(locations);
+    let locations = /*[[${searchData}]]*/ [];
+    console.log(locations);
 
-  var map = new naver.maps.Map("map", {
-    center: new naver.maps.LatLng(locations[0].latitude, locations[0].longitude),
-    zoom: 15,
-    mapTypeControl: true
-  });
-
-  locations.forEach(place => {
-
-    const marker = new naver.maps.Marker({
-      position: new naver.maps.LatLng(place.latitude, place.longitude),
-      map: map
+    // map 기본 설정
+    let map = new naver.maps.Map("map", {
+        center: new naver.maps.LatLng(37.5666805, 126.9784147),
+        zoom: 10,
+        mapTypeControl: true
     });
-    console.log(place.latitudeZ);
-  })
+
+    // 라디오박스 체크
+    const chk = document.getElementsByName('chk-address');
+
+    Array.from(chk).forEach((data)=>{
+        data.addEventListener('click', function (){
+
+            const lat = parseFloat(data.dataset.lat);
+            const lng = parseFloat(data.dataset.lng);
+
+            console.log(lat);
+            console.log(lng);
+
+            // 체크 시 map 새로 초기화
+            map = new naver.maps.Map("map", {
+                center: new naver.maps.LatLng(lat, lng),
+                zoom: 18,
+                mapTypeControl: true
+            });
+
+            // 체크 시 해당 좌표 마커
+            const marker = new naver.maps.Marker({
+                position: new naver.maps.LatLng(lat, lng),
+                map: map
+            });
+        })
+    })
+
+
+    // 다중 마커
+    // locations.forEach(place => {
+    //
+    //     const marker = new naver.maps.Marker({
+    //         position: new naver.maps.LatLng(place.latitude, place.longitude),
+    //         map: map
+    //     });
+    //     console.log(place.latitude);
+    // })
 
 </script>
 
-<!--<script>
 
 
 
